cluster/apps/default/qbittorrent/ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`qbittorrent.${SECRET_PUBLIC_DOMAIN}`)"
      kind: Rule
      middlewares:
      - name: chain-authelia-auth
        namespace: auth
      services:
        - name: qbittorrent
          namespace: default
          port: 8080
          scheme: http
  tls:
    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
